{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 48,
  "lineage": "54e455d2-555e-e2d1-7274-e7238dbb1a7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:targetgroup/ALBTargetGroupOnewebclient/f5424d63cda70013",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:listener-rule/app/StageB-Live2-xnlTjSaDmFvj/92bd57624dc83d12/66a13a3fe0951914/37cdc09f1c683913",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/bksblive2/v5api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:listener-rule/app/StageB-Live2-xnlTjSaDmFvj/92bd57624dc83d12/66a13a3fe0951914/37cdc09f1c683913",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:listener/app/StageB-Live2-xnlTjSaDmFvj/92bd57624dc83d12/66a13a3fe0951914",
            "priority": 110,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.alb_target_group_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:targetgroup/ALBTargetGroupOnewebclient/f5424d63cda70013",
            "arn_suffix": "targetgroup/ALBTargetGroupOnewebclient/f5424d63cda70013",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 20,
                "matcher": "200",
                "path": "/healthCheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 4
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:targetgroup/ALBTargetGroupOnewebclient/f5424d63cda70013",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:loadbalancer/app/StageB-Live2-xnlTjSaDmFvj/92bd57624dc83d12"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALBTargetGroupOnewebclient",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ALBTargetGroupwebclientOne"
            },
            "tags_all": {
              "Name": "ALBTargetGroupwebclientOne"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-005358c415bc03d2a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:targetgroup/ALBTargetGroupTwowebclient/062edd10fc79f157",
            "arn_suffix": "targetgroup/ALBTargetGroupTwowebclient/062edd10fc79f157",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 20,
                "matcher": "200",
                "path": "/healthCheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 4
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:targetgroup/ALBTargetGroupTwowebclient/062edd10fc79f157",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALBTargetGroupTwowebclient",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ALBTargetGroupwebclientTwo"
            },
            "tags_all": {
              "Name": "ALBTargetGroupwebclientTwo"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-005358c415bc03d2a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bksb_reforms_client_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:security-group/sg-09ef3bc217be31fae",
            "description": "StageBKSBReformsWebClientAppSydney/BKSBReformsClientSG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP egress rule for internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS egress rule for internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-09ef3bc217be31fae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Load balancer to target",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9c02e80606fdf25"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "StageBKSBReformsWebClientAppSydney-BKSBReformsClientSG",
            "name_prefix": "",
            "owner_id": "352515133004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "StageBKSBReformsWebClientAppSydney-BKSBReformsClientSG"
            },
            "tags_all": {
              "Name": "StageBKSBReformsWebClientAppSydney-BKSBReformsClientSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-005358c415bc03d2a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_prod_listener_egress_to_client_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Load balancer to target",
            "from_port": 443,
            "id": "sgrule-1245340130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b9c02e80606fdf25",
            "security_group_rule_id": "sgr-03bb71406d5d584ee",
            "self": false,
            "source_security_group_id": "sg-09ef3bc217be31fae",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bksb_reforms_client_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bksb_reforms_client_sg_ingress_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Load balancer to target",
            "from_port": 443,
            "id": "sgrule-1733979828",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ef3bc217be31fae",
            "security_group_rule_id": "sgr-0a1487a2299176ddb",
            "self": false,
            "source_security_group_id": "sg-0b9c02e80606fdf25",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bksb_reforms_client_sg"
          ]
        }
      ]
    }
  ]
}